# bootloader

./: fdt.c  init.c  meson.build
arch/aarch64/: boot.S  init.S  linker.ld
arch/aarch64/machines/: rpi3.c
host/: send-kernel.c
include/: bcm2835_mini_uart.h  init.h  uart.h
uart/: bcm2835_mini_uart.c
